syntax = "proto3";

package platform.type.v2;

import "platform/options/v2/annotations.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/openecosystems/ecosystem/go/oeco-sdk/v2beta/gen/platform/type/v2;typev2pb";

//
message ResponseMask {
  option (platform.options.v2.graph) = {
    type: GRAPH_TYPE_INPUT
  };

  google.protobuf.FieldMask field_mask = 1;

  google.protobuf.FieldMask policy_mask = 2;

}
